# AssistControlByQR

./: .gitignore  .pre-commit-config.yaml  README.md  invitados.csv  invitados.db  main.py  pyproject.toml
scripts/: format_and_stage.py
templates/: confirmacion_old.html  inicio.html
tests/: invitados.db  test_app.py
